# Athena-Public

./: .athena_root  .env.example  .gitignore  .syncignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.sandbox  LICENSE  README.md  SECURITY.md  SUPPORT.md  bootstrap.py  privacy_scrubber.py  pyproject.toml  requirements-full.txt  requirements-lite.txt  requirements.txt  robots.txt  simulation.py  sitemap.xml
.agent/: PROMPT_LIBRARY.md
.agent/config/: README.md
.agent/diagnostics/: issue-20260131-133739-ValueError.md
.agent/scripts/: lightrag_wrapper.py  query_graphrag.py
.agent/workflows/: brand-generator.md  deploy.md  end.md  plan.md  refactor.md  research.md  save.md  start.md  ultrathink.md  vibe.md
.context/: CANONICAL.md  PROTOCOL_SUMMARIES.md  TAG_INDEX.md  project_state.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  sentinel_config.yml
.github/ISSUE_TEMPLATE/: agent_contribution.md  bug_report.md  config.yml  feature_request.md  question.md
.github/scripts/: sentinel.py
.github/workflows/: sentinel.yml  waka-readme.yml
.kilocode/rules/: athena.md
Athena-Public.wiki/: FAQ.md  Getting-Started.md  Philosophy.md
PR_ideas/: GUIDE_Supabase_with_Ollama_Embeddings.md  INTEGRATION_DECISION_GUIDE.md  PR_SUBMISSION_REPORT.md  TECHNICAL_IMPLEMENTATION_REPORT.md  athena-installation-journey.md  uv-windows-editable-install-bug.md  windows-encoding-issues.md
PR_ideas/submitted/: windows-powershell-compatibility
community/: CHANGELOG.md  ROADMAP.md
docs/: ABOUT_ME.md  ARCHITECTURE.md  BENCHMARKS.md  BEST_PRACTICES.md  CAPABILITIES.md  CHANGELOG.md  CLI.md  COMPATIBLE_IDES.md  DEMO.md  ENGINEERING_DEPTH.md  EXOCORTEX.md  FAQ.md  FEATURES.md  GETTING_STARTED.md  GLOSSARY.md  GRAPHRAG.md  IMPORTING.md  KNOWLEDGE_GRAPH.md  LOCAL_MODE.md  MANIFESTO.md  MCP_SERVER.md  MEMORY_BANK.md  MULTI_MODEL_STRATEGY.md  PROJECT_IDEAS.md  REFERENCES.md  REQUIREMENTS.md  SECURITY.md  SEMANTIC_SEARCH.md  SPEC_SHEET.md  TAG_INDEX.md  TECH_DEBT.md  TIPS.md  TOP_10_PROTOCOLS.md  UPDATING.md  USER_DRIVEN_RSI.md  VECTORRAG.md  WHAT_IS_AN_AI_AGENT.md  WORKFLOWS.md  YOUR_FIRST_AGENT.md  YOUR_FIRST_SESSION.md
docs/audit/: SYSTEM_AUDIT_MANIFEST.md
docs/concepts/: Cognitive_Architecture.md  Quadrant_IV.md
docs/marketing/: DIFFERENTIATION.md  REDDIT_LAUNCH_POST.md
docs/protocols/: 131-bimodal-arena-analysis.md  409-parallel-worktree-orchestration.md  410-agent-status-broadcasting.md  (+6 more)
examples/: ANALYTICS_REPORT.md  CASE_STUDY_EXAMPLE.md  DEMO_SCRIPT.md  PATTERN_EXAMPLE.md  demo.html  knowledge_graph_demo.html
notes/: ATHENA_INSTALLATION_GUIDE.md  athena-sync-guide.md
plans/: orchestrator-prompts.md  windows-encoding-fix-plan.md
scripts/: athena_status.py  boot.py  code_indexer.py  context_monitor.py  launch_athena.sh  parallel_orchestrator.py  safe_boot.sh  shutdown.py  structure_map.py
site/: about.html  contact.html  framework.html  index.html  writing.html
supabase/: MASTER_SCHEMA.sql  config.toml
tests/: test_great_steal.py  test_windows_encoding.py
wiki/: Home.md  Use-Cases.md  Workflow-Reference.md
(+487 files in other folders)
