[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "athena-sdk"
version = "9.2.6"
description = "Athena Bionic OS SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Winston Koh", email = "winstonkoh87@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.7.0",
    "supabase>=2.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "anthropic>=0.40.0",
    "dspy-ai>=3.1.3",
    "flashrank>=0.2.9",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "diskcache>=5.6.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "pipreqs",
    "pydeps"
]

[tool.hatch.build.targets.wheel]
packages = ["src/athena"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.isort]
known-first-party = ["athena"]

[tool.black]
line-length = 88
target-version = ["py310"]
